--- a/Chatroom/core/templates/core/base.html
+++ b/Chatroom/core/templates/core/base.html
@@ -3,10 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DjangoChat</title>
+    <title>Chatrooms</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-teal-600">
-    Django
+    <nav class="flex items-center justify-between px-4 py-6 bg-teal-800">
+      <div>
+        <a href="/" class="text-xl text-white">Chatrooms </a>
+      </div>
+      <div class="flex items-center space-x-4">
+        <a href="/login/" class="text-white hover:text-gray-200">Login</a>
+
+        <a
+          href="/signup/"
+          class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700"
+          >Sign Up</a
+        >
+      </div>
+    </nav>
+    <div class="p-10 lg:p-20 text-center">
+      <h1 class="text-3xl lg:text-6xl text-white">Welcome to the Chatrooms</h1>
+    </div>
   </body>
 </html>
