--- a/Chatroom/core/templates/core/base.html
+++ b/Chatroom/core/templates/core/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chatrooms</title>
+    <title>{% block title %}{% endblock %}Chatrooms</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-teal-600">
@@ -21,8 +21,6 @@
         >
       </div>
     </nav>
-    <div class="p-10 lg:p-20 text-center">
-      <h1 class="text-3xl lg:text-6xl text-white">Welcome to the Chatrooms</h1>
-    </div>
+    {% block content %} {% endblock %}
   </body>
 </html>
