Created a new app for the rooms

--- a/Chatroom/core/templates/core/frontpage.html
+++ b/Chatroom/core/templates/core/frontpage.html
@@ -1,4 +1,5 @@
-{% extends 'core/base.html'%} {% block title %} Welcome | {% endblock %} 
+{% extends 'core/base.html'%} 
+{% block title %} Welcome | {% endblock %} 
 
 {%block content %}
 <div class="p-10 lg:p-20 text-center">
